# note

./: Cargo.toml
src/: cli.rs  lib.rs  logging.rs  main.rs
