[package]
name = "note"
version = "0.1.0"
authors = ["Jacob Magnusson <m@jacobian.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "^3.0.0-beta.2"
edit = "0.1.3"
env_logger = "0.8.3"
log = "0.4.14"
shellexpand = "2.1.0"
