[package]
name = "note"
version = "0.1.0"
authors = ["Jacob Magnusson <m@jacobian.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
edit = "0.1.4"
env_logger = "0.9.0"
log = "0.4.17"
shellexpand = "2.1.0"
